--- a/package.json
+++ b/package.json
@@ -3,12 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.2.0",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
+    "@atlaskit/media-core": "^33.0.0",
+    "@atlaskit/media-viewer": "^46.3.0",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-intl": "^2.6.0",
+    "react-intl-next": "npm:react-intl@^5.25.1",
     "react-scripts": "5.0.1",
+    "rxjs": "^5.5.12",
+    "styled-components": "^3.4.10",
+    "url": "^0.11.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
